--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body, html { height: 100%; line-height: 1.8;}
 
 <!-- Top menu -->
 <div class="w3-top">
-  <div class="w3-black w3-large" style="max-width:100%;margin:auto">
+  <div class="w3-black " style="max-width:100%;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
    		<div class="w3-center w3-padding-16">
         <a href="https://alexandroshub.github.io/index.html" style="text-decoration: none" class="w3-bar-item  w3-wide">
