--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
     <div class="w3-display-topleft w3-black w3-padding">Developing & Code</div>
     <div class="w3-display-bottomleft w3-black w3-padding" onclick="alrtFunction()" >
     <i class="fa fa-info"></i></div> 
-	<script> function alrtFunction(){alert("c\n\nΟ πιο απλός αυτοματισμός μπορεί να είναι ένας φωτοδιακόπτης.\nΌταν βραδιάζει, ανάβουν τα φώτα του σπιτιού.");}</script>
+	<script> function alrtFunction(){alert("Προγραμματισμός υπολογιστών \n\n καλείται το σύνολο των διαδικασιών σύνταξης ενός υπολογιστικού προγράμματος, συνήθως ως υλοποίηση κάποιων αλγορίθμων ύστερα από προσεκτική σχεδίαση, για την αυτοματοποιημένη εκτέλεση εργασιών ή επίλυση κάποιου υπολογιστικού προβλήματος από έναν υπολογιστή. Ο προγραμματισμός περιλαμβάνει επίσης τον έλεγχο του προγράμματος για την επαλήθευση της ακρίβειας και της ορθότητάς του (αποσφαλμάτωση), και την προπαρασκευή των οδηγιών με τις οποίες ένας υπολογιστής θα εκτελέσει τις εντολές που καθορίζονται στις προδιαγραφές του προγράμματος. Θεμελιώδη ρόλο στον υπολογιστικό προγραμματισμό διαδραματίζουν οι χιλιάδες διαφορετικές γλώσσες προγραμματισμού, δηλαδή οι προτυποποιημένες τυπικές γλώσσες απαραίτητες για τη σύνθεση ενός προγράμματος.\n\n Read More: https://alexandroshub.github.io/portfolio.html#code");}</script>
    
     <a href="https://alexandroshub.github.io/proj_code.html">
     <img src="https://c2.staticflickr.com/3/2817/32706842880_b828022e51_o.png" alt="olt" style="width:100%"></a>
@@ -208,16 +208,16 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 <img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" alt="IoT" style="width:100%"></a>
 <div class="w3-display-bottomleft w3-black w3-padding" onclick="al2tFunction()" >
     <i class="fa fa-info"></i></div>
-	<script> function al2tFunction(){alert("22Hello! I am an alert box!");}</script>
+	<script> function al2tFunction(){alert("Τί είναι ο Internet of Things? \n\n Το Internet of Things είναι μία έννοια που αφορά τα αντικείμενα της καθημερινότητας μας – από βιομηχανικές μηχανές μέχρι wearable συσκευές που χρησιμοποιούν ενσωματωμένους αισθητήρες για  τη συλλογή δεδομένων & την ανάληψη κάποιας δράσης σε αυτά μέσα σε ένα δίκτυο. Κάπως έτσι λειτουργεί ένα κτίριο που χρησιμοποιεί αισθητήρες (sensors) για την αυτόματη ρύθμιση της θέρμανσης ή του φωτισμού. Άλλο παράδειγμα είναι ο ένας εξοπλισμός παραγωγής που προειδοποιεί το προσωπικό συντήρησης για μία επικείμενη βλάβη. Με απλά λόγια το Internet of Things είναι το τεχνολογικό μέλλον που θα κάνει τη ζωή μας πιο εύκολη.\n\n Read More: https://robodayblog.wordpress.com/2016/05/30/iot-roboday");}</script>
 </div></div>
 <!-- 3 -->     
 <div class="w3-col l3 m6 w3-margin-bottom"><div class="w3-display-container">
 <div class="w3-display-topleft w3-black w3-padding">
 Automations & Robotics</div>
-<img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Michatron" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
+<img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Michatron" style="width:100%" onclick="onClick(this)">
 <div class="w3-display-bottomleft w3-black w3-padding" onclick="al3tFunction()" >
 <i class="fa fa-info"></i></div>
-	<script> function al3tFunction(){alert("33Hello! I am an alert box!");}</script>
+	<script> function al3tFunction(){alert("Αυτοματισμός\n\n Ο αυτοματισμός δεν είναι τίποτα άλλο παρά η εύρεση ενός αλγορίθμου για την επίλυση ενός προβλήματος, ή η κατασκευή ενός αυτόνομου μηχανισμού που εκτελεί αυτόν τον αλγόριθμο για κάποια είσοδο χωρίς ανθρώπινη παρέμβαση. \n\n Read More: https://robodayblog.wordpress.com ");}</script>
 </div></div>
 
 <!-- 4 --> 
@@ -282,9 +282,7 @@ Files & Publications</div>
     <div class="w3-third">  <h3>BLOG POSTS</h3>
   <p> <span class="w3-tag w3-black"><a href="https://alexandroshub.github.io/about">ABOUT</a></span> 
       Λιγα λογια για τη σελίδα.</p>
-     <div class="w3-section"><a href="https://alexandroshub.github.io/soon" class="w3-button w3-black"><i class="fa fa-arrow-up w3-margin-right"></i>TECH SUPPORT & SOLUTIONS</a>
-  </div>
-    </div>
+      </div>
 
   </div>
   </footer>
@@ -371,4 +369,3 @@ Sub: 		papaspyrou.alexandros@gmail.com
 -->
 
 <!-- Πηγές:  https://www.w3schools.com  |  https://www.udacity.com  |   -->
-
