--- a/links.html
+++ b/links.html
@@ -1,14 +1,13 @@
-
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ By: Alexandros Papaspyrou
+Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.19.02.19
 -->
 <!DOCTYPE html>
 <html>
-<title>Papaspyrou</title>
+<title>Papaspyrou | Links</title>
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -52,20 +51,42 @@ body, html {
   logged_out_greeting="Hi! How can i help you?">
 </div>
 <!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
-
 <!-- ////////////////////////// Navbar ////////////////////////// -->
+
+<!-- Top menu -->
+<div class="w3-top">
+  <div class="w3-black w3-large" style="max-width:100%;margin:auto">
+    <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
+   		<div class="w3-center w3-padding-16">
+        <a href="https://alexandroshub.github.io/index.html" style="text-decoration: none" class="w3-bar-item  w3-wide">
+        <b>Papaspyrou</b>&nbsp; <img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" style="width:27px;" class="w3-hover-opacity">&nbsp; <b>Alexandros</b></a> 
+    </div>
+  </div>
+</div>
+
+<!--
+
+
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card" id="myNavbar">
-    <a href="https://alexandroshub.github.io/index.html" class="w3-bar-item w3-button w3-wide">
-<img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" style="width:27px;" class="w3-left w3-hover-opacity"> &nbsp; 
-<b> Papaspyrou</b><span class="w3-hide-small w3-hide-medium"> Alexandros</span></a>
-    <!-- Right-sided navbar links -->
+  
+    <!-- Hide right-floated links on small screens and replace them with a menu icon ->
+    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-black" onclick="w3_open()"><i class="fa fa-bars"></i></a>
+  
+<a href="https://alexandroshub.github.io/index.html" class="w3-bar-item w3-button w3-wide">
+ 
+<span class="w3-center w3-hide-small w3-hide-medium"><b>Papaspyrou</b></span>&nbsp; <img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" style="width:27px;" class="w3-hover-opacity">&nbsp; <span class="w3-hide-small w3-hide-medium"><b>Alexandros</b></span></a> 
+</div>
+    <!-- Right-sided navbar links ->
     <div class="w3-right ">
-    <!-- Hide right-floated links on small screens and replace them with a menu icon -->
-    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-black" onclick="w3_open()"><i class="fa fa-bars"></i></a>
+    <a href="#port" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i></a>
+    <a href="#me" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user-o"></i></a>
+  
   </div>
  </div>  
 </div>
+
+-->
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-top" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red"> Close ×</a>
@@ -74,8 +95,6 @@ body, html {
 	<a href="https://robodayblog.wordpress.com/" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-green"><i class="fa fa-coffee"></i>  &nbsp; Blog</a> 
     <a href="https://alexandroshub.github.io/links.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-purple"><i class="fa fa-link"></i>  &nbsp; Links</a> 
     <hr>
-    ENJOY THE 2019 VERSION
-	<hr>
 <a href="https://m.me/papaspyrou.alexandros" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i> Messenger</a>
   <a href="https://alexandroshub.github.io/vip.dashboard.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
 <a href="https://alexandroshub.github.io/cono" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-pink"><i class="fa fa-connectdevelop fa-fw"></i> CoNo</a>
@@ -120,6 +139,7 @@ function w3_close() {mySidebar.style.display = "none";} </script>
       <p><i>"The Web without links is like a world without roads."</i></p></div>
  
 <br><span class="w3-tag w3-black">EVENTS</span><span class="w3-tag w3-blue">
+<a href="http://www.infocomsecurity.gr/"> 9o INFOCOM SECURITY </a>  17 – 18 Απριλίου 2019 Συνεδριακό Κέντρο Δαΐς, Μαρούσι
 <!--
 <a href="https://jobfestival.gr"> Athens #JobFestival 2018 </a> 
 <a href=" https://www.e-businessworld.gr ">e-Business & Social Media World 2018</a> 
@@ -325,6 +345,8 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 		<a href="http://wallpaperswide.com/">wallpaperswide</a> |
 		<a href="https://wallpaperscraft.com/">wallpaperscraft</a> |
 		<a href="https://pixabay.com/">pixabay</a> |
+       	<a href="https://unsplash.com/">unsplash</a> |
+       	<a href="https://www.pexels.com/">pexels</a> |
     <br><span class="w3-red">SPACE</span> 
         <a href="https://m.esa.int/ESA">ESA</a> | 
     <br><span class="w3-red">FRIENDS</span> 
@@ -343,14 +365,24 @@ function w3_close() {mySidebar.style.display = "none";} </script>
         https://www.eberus.com/
         https://www.aqs.gr/
         https://www.cqs.com.gr/
+        https://odir.org
 -->     
         
 </div></div></div></div></div>
 <!-- End page content -->
-
 <!-- Footer -->
-<!--Footer Section ////////////////////////////////////////////////////////// -->
-<div class="w3-center w3-black w3-padding-16"><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2018</div>
+<footer class="w3-center w3-black w3-padding-16">
+<!-- top --> 
+<a href="#home" class="w3-button"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>
+  <div class="w3-xlarge w3-section"></div>
+  <!-- twitter --><a href=" https://twitter.com/A_Papaspyrou" title="Twitter"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+  <!-- facebook -->
+  <a href="https://www.facebook.com/papaspyrou.a" title="Facebook"><i class="fa fa-facebook-f w3-hover-opacity">
+  </i></a>
+  <!-- linkedin -->
+  <a href="https://gr.linkedin.com/in/alexandrospapaspyrou" title="Linkedin"><i class="fa fa-linkedin w3-hover-opacity"></i></a> | 
+  <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:280px;" alt="Signature" align="bottom">
+</footer>
 <!-- ////////////////////////////////////////////////////////// -->
 <script> // Tabbed Menu
 function openMenu(evt, menuName) {
