--- a/plus.html
+++ b/plus.html
@@ -1,3 +1,4 @@
+	
 
 <!--
 
@@ -7,7 +8,7 @@
 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 11/11/2017  |  Pre-alpha Stage -->
+Last Update: 21/4/2019-->
 
 <!DOCTYPE html>
 <html>
@@ -16,6 +17,7 @@ Last Update: 11/11/2017  |  Pre-alpha Stage -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<meta http-equiv="Refresh" content="4;url=https://robodayblog.wordpress.com/">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Raleway text Style --><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -29,6 +31,26 @@ body, html {height: 100%}
     min-height: 100%;
     background-position: center;
     background-size: cover;
+}
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid black;
+  border-bottom: 16px solid black;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 </style>
 <body>
@@ -45,6 +67,14 @@ body, html {height: 100%}
     <p><a href="https://alexandroshub.github.io/soon.html"><button class="w3-button w3-black">a+  _1_Nov17</button></a></p>
    
   </div>
+  
+   <div class="w3-display-middle">
+<h3>Sorry! We have moved!</h3> 
+<p>The new URL is: <a href="https://alexandroshub.github.io/index">https://robodayblog.wordpress.com/</a></p>
+<p>You will be redirected to the new address in five seconds.</p>
+<p>If you see this message for more than 4 seconds, please click on the link above!</p><br>
+<div class="loader"></div>
+</div>
  
 </div>
 
