--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@ body, html { height: 100%; line-height: 1.8;}
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-top" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red"><i class="fa fa-times-circle"></i> &nbsp;  Close</a>
-  <a href="https://alexandroshub.github.io/portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="fa fa-send-o"></i>&nbsp;  Portfolio</a>
+  <a href="https://alexandroshub.github.io/portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="	fa fa-folder-open-o"></i>&nbsp;  Portfolio</a>
 	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> &nbsp;  CV </a> 
-	<a href="https://robodayblog.wordpress.com/" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-green"><i class="fa fa-coffee"></i>  &nbsp; Blog</a> 
-    <a href="https://alexandroshub.github.io/links.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-purple"><i class="fa fa-link"></i>  &nbsp; Links</a> 
+	<a href="https://alexandroshub.github.io/plus" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-purple"><i class="	fa fa-plus-circle"></i>  &nbsp; Plus</a> 
+    <a href="https://alexandroshub.github.io/links.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-teal"><i class="fa fa-link"></i>  &nbsp; Links</a> 
+        <a href="https://alexandroshub.github.io/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-lime"><i class="fa fa-envelope-o"></i>  &nbsp; Contact</a> 
     <hr>
 <a href="https://m.me/papaspyrou.alexandros" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i> Messenger</a>
-  <a href="https://alexandroshub.github.io/vip.dashboard.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
 <a href="https://alexandroshub.github.io/cono" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-pink"><i class="fa fa-connectdevelop fa-fw"></i> CoNo</a>
 </nav>
 
@@ -124,7 +124,8 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
  <span class="w3-hide-small">
   
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
-  
+ 
+<!-- Dashboard --><a href=" https://alexandroshub.github.io/vip.dashboard.html " title="Dashboard"><i class="fa fa-pencil-square-o"></i></a>
 <!-- support --><a href=" https://alexandroshub.github.io/support.html " title="support"><i class="fa fa-support"></i></a> 
 <!-- android --><a style="text-decoration: none" onclick="on()"title="android"><i class="fa fa-android"></i></a> 
 <!-- About --><a href=" https://alexandroshub.github.io/about " title="About"><i class="fa fa-info-circle"></i></a> | 
@@ -132,8 +133,7 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 <!-- facebook -->
 <a href="https://www.facebook.com/papaspyrou.a" title="facebook"><i class="fa fa-facebook-f"></i></a>
 <!-- linkedin -->
-<a href="https://gr.linkedin.com/in/alexandrospapaspyrou" title="Linkedin"><i class="fa fa-linkedin"></i></a>
-<!-- github --><a href="https://github.com/alexandroshub" title="github"><i class="fa fa-github-alt" ></i></a> | 
+<a href="https://gr.linkedin.com/in/alexandrospapaspyrou" title="Linkedin"><i class="fa fa-linkedin"></i></a> | 
 <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:270px;" alt="Signature" align="bottom">
 </div></span>
 </header>
@@ -261,7 +261,17 @@ Files & Publications</div>
   <div class="w3-row-padding">
     <div class="w3-third">
       <img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" style="width:100px;">
-      <p>      
+      <p>
+
+
+<!-- top --><a href="#home" class="w3-button"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>
+  <!-- twitter --><a href=" https://twitter.com/A_Papaspyrou" title="Twitter"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+  <!-- facebook -->
+  <a href="https://www.facebook.com/papaspyrou.a" title="Facebook"><i class="fa fa-facebook-f w3-hover-opacity">
+  </i></a>  | 
+  <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:280px;" alt="Signature" align="bottom">
+
+
 </p>
   </div>
   
@@ -307,7 +317,15 @@ Files & Publications</div>
   <!-- twitter --><a href=" https://twitter.com/A_Papaspyrou" title="Twitter"><i class="fa fa-twitter w3-hover-opacity"></i></a>
   <!-- facebook -->
   <a href="https://www.facebook.com/papaspyrou.a" title="Facebook"><i class="fa fa-facebook-f w3-hover-opacity">
-  </i></a>  | 
+  </i></a> 
+  <!-- contact -->
+  <a href="https://alexandroshub.github.io/.html" title="contact"><i class=" fa fa-envelope w3-hover-opacity">
+  </i></a> 
+  
+ 
+  
+  
+  | 
   <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:280px;" alt="Signature" align="bottom">
 
 </footer>
