--- a/portfolio.html
+++ b/portfolio.html
@@ -1,3 +1,5 @@
+
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -53,18 +55,19 @@ body, html {
 <!--  ////////////////////////// messenger_platform  ////////////////////////// -->   
 <!-- ////////////////////////// Navbar ////////////////////////// -->
 <!-- Top menu -->
+
+<!-- Top menu -->
 <div class="w3-top">
-  <div class="w3-black " style="max-width:100%;margin:auto">
-    <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
+  <div id="myNavbar" style="max-width:100%;margin:auto; background:#1d1919">
+    <div class="w3-button w3-padding-16 w3-left w3-hover-red" onclick="w3_open()"><b><font color="#ebf0f6"><i class="fa fa-bars"></i></font></b></div>
    		<div class="w3-center w3-padding-16">
         <a href="https://alexandroshub.github.io/index.html" style="text-decoration: none" class="w3-bar-item  w3-wide">
-        <b>Papaspyrou</b>&nbsp; <img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" style="width:27px;" class="w3-hover-opacity">&nbsp; <b>Alexandros</b></a> 
+        <b><font color="#ebf0f6">Papaspyrou</font></b>&nbsp; <img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" style="width:27px;" class="w3-hover-opacity">&nbsp; <b><font color="#ebf0f6">Alexandros</font></b></a> 
     </div>
   </div>
 </div>
 
 <!--
-
 
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card" id="myNavbar">
@@ -122,20 +125,23 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-text-white">Ημερομηνία τελευταίας τροποποίησης: 14.1.2019</span>
+    <span class="w3-text-white">Ημερομηνία τελευταίας τροποποίησης: 8.6.2019</span>
   </div>
 </header>
 
-<div class="w3-center w3-padding-32"><span class="w3-large w3-border-dark-grey w3-padding-16">" Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία, όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία." </span><br>-</div>
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-large">
 <!-- About Container -->
-<div class="w3-container" id="about"></div>
-<div class="w3-center w3-padding-32" id="projects"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Projects</span></div>    
+<div class="w3-container"></div>
+<div class="w3-center w3-padding-64" id="intro"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Intro</span>
+<a href="#publications" class="w3-button w3-dark-grey"><i class="fa fa-arrow-down"></i></a></div>    
 <!-- Promo Section - "We know design" -->
 <div class="w3-container w3-light-gray w3-grayscale-min" style="padding:40px 16px"  id="port">
   <div class="w3-row-padding"><br>
     <div class="w3-col m6"><div class="w3-center">
+    <p><span class="w3-xlarge"><i class="fa fa-slack" style="color:red"></i> intro</span><br>
+    <span class="w3-large w3-border-dark-grey w3-padding-16">" Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία, όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία." </span>
+    </p>
 		<p><span class="w3-xlarge"><i class="fa fa-file-text" style="color:red"></i> Files</span>
    <br><span class="w3-tag w3-small w3-black"><b> Αρχείο με τις εργασίες μου</b>
 <a href="https://www.dropbox.com/sh/y7j320ldle8678d/AABMt-dGKjWB1ty2JnuflvcUa?dl=0"><i class="fa fa-dropbox"></i></a>
@@ -172,16 +178,87 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 <iframe src="https://robodayblog.wordpress.com" height="400" width="75%"></iframe>
 </div>
 <!-- ////////////////////////////////////////////////////////// -->
-<div class="w3-center w3-padding-64" id="publications"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Publications</span></div>
-<!-- Promo computerevolution --><div class="w3-container w3-row w3-center w3-blue w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-red"> Publications</span><br><b>“ Η εξέλιξη των Η/Υ ”</b> (από τον άβακα στο Tablet) Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας. <span class="w3-tag w3-small w3-red"><a href="https://issuu.com/a-papaspyrou/docs/computerevolution_alexandros_papasp"><i class="fa fa-file-text-o"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-red"><a href="https://www.slideshare.net/alexandrospapaspurou/computer-evolution-48891311"><i class="fa fa-slideshare"></i></a></span></div><!-- END Promo  -->
-<!-- Promo fotodiakoptis--><div class="w3-container w3-row w3-center w3-red w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-yellow"> Publications</span><br><b>“ Το κύκλωμα του Φωτοδιακόπτη ”</b> χχ. <span class="w3-tag w3-small w3-yellow"><a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><i class="fa fa-dropbox"></i></a></span></div><!-- END Promo  -->
-<!-- Promo Michatron--><div class="w3-container w3-row w3-center w3-gray w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-black"> Publications</span><br><b>“ Μελέτη και Κατασκευή Μichatron ”</b> Το Michatron, ξεκινάει με μη χειροκίνητο τρόπο, ακολουθεί μια μαύρη γραμμή, προσπερνάει τα εμπόδια και σταματάει αυτόματα.<span class="w3-tag w3-small w3-black"><a href="https://issuu.com/a-papaspyrou/docs/michatron_papaspyrou_alexandros"><i class="fa fa-file-text-o"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-black"><a href="https://codebender.cc/embed/sketch:208552#Michatron.ino"><i class="fa fa-code"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-black"><a href="https://vimeo.com/141997888"><i class="fa fa-vimeo"></i></a></span></div> <!-- END Promo  -->
-<!-- Promo MPPT--><div class="w3-container w3-row w3-center w3-purple w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-green"> Publications</span><br><b>“ Τεχνικές MPPT ”</b> Ανάλυση τεχνικών ανίχνευσης σημείου μέγιστης ισχύος φωτοβολταϊκού. <span class="w3-tag w3-small w3-green"><a href="https://issuu.com/a-papaspyrou/docs/mppt_final"><i class="fa fa-file-text-o"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-green"><a href="https://www.slideshare.net/alexandrospapaspurou/mppt-30080120"><i class="fa fa-slideshare"></i></a></span></div> <!-- END Promo  -->
+<div class="w3-center w3-padding-64" id="publications">
+<a href="#intro" class="w3-button w3-dark-grey"><i class="fa fa-arrow-up"></i></a>
+<span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Publications</span>
+<a href="#code" class="w3-button w3-dark-grey"><i class="fa fa-arrow-down"></i></a></div>
+
+<div class="w3-row">
+  <div class="w3-third w3-container w3-blue w3-grayscale">
+    <h5>Η εξέλιξη των Η/Υ</h5>  
+   
+  </div>
+  <div class="w3-third w3-container">
+    <h5>Περιγραφή</h5>  <p>“ Η εξέλιξη των Η/Υ ” (από τον άβακα στο Tablet) Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας.</p> 
+  </div>
+  <div class="w3-third w3-container">
+    <h5>Αρχεία</h5>  
+    <span class="w3-tag w3-small w3-red"><a href="https://issuu.com/a-papaspyrou/docs/computerevolution_alexandros_papasp"><i class="fa fa-file-text-o"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-red"><a href="https://www.slideshare.net/alexandrospapaspurou/computer-evolution-48891311"><i class="fa fa-slideshare"></i></a></span>
+  </div>
+</div>
+<br>
+
+
+
+<!-- Promo computerevolution -><div class="w3-container w3-row w3-center w3-blue w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-red"> Publications</span><br><b>“ Η εξέλιξη των Η/Υ ”</b> (από τον άβακα στο Tablet) Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας. <span class="w3-tag w3-small w3-red"><a href="https://issuu.com/a-papaspyrou/docs/computerevolution_alexandros_papasp"><i class="fa fa-file-text-o"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-red"><a href="https://www.slideshare.net/alexandrospapaspurou/computer-evolution-48891311"><i class="fa fa-slideshare"></i></a></span></div><!-- END Promo  -->
+<!-- Promo fotodiakoptis-->
+
+<!-- ////////////////////////////////////////////////////////// -->
+
+<div class="w3-row">
+  <div class="w3-third w3-container w3-red w3-grayscale"><h5>Το κύκλωμα του Φωτοδιακόπτη</h5></div>
+  <div class="w3-third w3-container">
+    <h5>Περιγραφή</h5><p>.</p> 
+  </div>
+  <div class="w3-third w3-container">
+    <h5>Αρχεία</h5>  
+  <span class="w3-tag w3-small w3-yellow"><a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>
+  </div>
+</div>
+<br>
+
+<!-- ////////////////////////////////////////////////////////// -->
+<!-- Promo Michatron-->
+<div class="w3-row">
+  <div class="w3-third w3-container w3-gray w3-grayscale">
+    <h5>Μελέτη και Κατασκευή Μichatron</h5>  
+   
+  </div>
+  <div class="w3-third w3-container">
+    <h5>Περιγραφή</h5>  <p>Το Michatron, ξεκινάει με μη χειροκίνητο τρόπο, ακολουθεί μια μαύρη γραμμή, προσπερνάει τα εμπόδια και σταματάει αυτόματα.</p> 
+  </div>
+  <div class="w3-third w3-container">
+    <h5>Αρχεία</h5>  
+ <span class="w3-tag w3-small w3-black"><a href="https://issuu.com/a-papaspyrou/docs/michatron_papaspyrou_alexandros"><i class="fa fa-file-text-o"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-black"><a href="https://codebender.cc/embed/sketch:208552#Michatron.ino"><i class="fa fa-code"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-black"><a href="https://vimeo.com/141997888"><i class="fa fa-vimeo"></i></a></span>
+  </div>
+</div>
+<br>
+
+<!-- ////////////////////////////////////////////////////////// -->
+<!-- Promo MPPT-->
+<div class="w3-row">
+  <div class="w3-third w3-container w3-purple w3-grayscale">
+    <h5>Τεχνικές MPPT</h5>  
+   
+  </div>
+  <div class="w3-third w3-container">
+    <h5>Περιγραφή</h5>  <p>Ανάλυση τεχνικών ανίχνευσης σημείου μέγιστης ισχύος φωτοβολταϊκού.</p> 
+  </div>
+  <div class="w3-third w3-container">
+    <h5>Αρχεία</h5>  
+<span class="w3-tag w3-small w3-green"><a href="https://issuu.com/a-papaspyrou/docs/mppt_final"><i class="fa fa-file-text-o"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-green"><a href="https://www.slideshare.net/alexandrospapaspurou/mppt-30080120"><i class="fa fa-slideshare"></i></a></span>
+  </div>
+</div>
+<br>
 
 <!-- Promo Section - "We know design" -->
 <div class="w3-container w3-light-grey w3-grayscale-min" style="padding:40px 16px"  id="port">
-  <div class="w3-row-padding">
-  <div class="w3-center w3-padding-64" id="code"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Coding Time</span></div>
+  <div class="w3-row-padding"> 
+  <div class="w3-center w3-padding-64" id="code">
+<a href="#publications" class="w3-button w3-dark-grey"><i class="fa fa-arrow-up"></i></a>
+<span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Coding Time</span></div>
+  
+  
     <div class="w3-col m6">
     <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> Coding Projects</a></p>
        <span class="w3-tag w3-small w3-red"><a href="https://alexandroshub.github.io/cpp.html"><b>C / C++</b></a></span>
