--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,14 @@
+<!-- CONTACT HTML  V.08.07.19 -->
+<!--
+░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
+▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
+▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
+Welcome in my personal website 100% HTML Hosted by Github
+Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou
+┌─┐┬  ┌─┐─┐ ┬┌─┐┌┐┌┌┬┐┬─┐┌─┐┌─┐┬ ┬┬ ┬┌┐  ┌─┐┬┌┬┐┬ ┬┬ ┬┌┐  ┬┌─┐
+├─┤│  ├┤ ┌┴┬┘├─┤│││ ││├┬┘│ │└─┐├─┤│ │├┴┐ │ ┬│ │ ├─┤│ │├┴┐ ││ │
+┴ ┴┴─┘└─┘┴ └─┴ ┴┘└┘─┴┘┴└─└─┘└─┘┴ ┴└─┘└─┘o└─┘┴ ┴ ┴ ┴└─┘└─┘o┴└─┘
+-->
 <!DOCTYPE html>
 <html>
 <title>Papaspyrou | index</title>
@@ -37,15 +48,16 @@ body, html { height: 100%; line-height: 1.8;}
   logged_out_greeting="Hi! How can i help you?">
 </div>
 <!--  ////////////////////////// messenger_platform  ////////////////////////// -->
+
 <!-- ////////////////////////// Navbar ////////////////////////// -->
 
 <!-- Top menu -->
 <div class="w3-top">
-  <div class="w3-black " style="max-width:100%;margin:auto">
-    <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()"><i class="fa fa-bars"></i></div>
+  <div id="myNavbar" style="max-width:100%;margin:auto; background:#1d1919">
+    <div class="w3-button w3-padding-16 w3-left w3-hover-red" onclick="w3_open()"><b><font color="#ebf0f6"><i class="fa fa-bars"></i></font></b></div>
    		<div class="w3-center w3-padding-16">
         <a href="https://alexandroshub.github.io/index.html" style="text-decoration: none" class="w3-bar-item  w3-wide">
-        <b>Papaspyrou</b>&nbsp; <img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" style="width:27px;" class="w3-hover-opacity">&nbsp; <b>Alexandros</b></a> 
+        <b><font color="#ebf0f6">Papaspyrou</font></b>&nbsp; <img src="https://66.media.tumblr.com/fb287d1352f741032dd4b1e2a49ecc77/tumblr_phxnkoY5KO1si59zfo1_400.png" style="width:27px;" class="w3-hover-opacity">&nbsp; <b><font color="#ebf0f6">Alexandros</font></b></a> 
     </div>
   </div>
 </div>
@@ -76,27 +88,34 @@ body, html { height: 100%; line-height: 1.8;}
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-top" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red"><i class="fa fa-times-circle"></i> &nbsp;  Close</a>
-  <a href="https://alexandroshub.github.io/portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="fa fa-send-o"></i>&nbsp;  Portfolio</a>
+  <a href="https://alexandroshub.github.io/portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="	fa fa-folder-open-o"></i>&nbsp;  Portfolio</a>
 	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> &nbsp;  CV </a> 
-	<a href="https://robodayblog.wordpress.com/" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-green"><i class="fa fa-coffee"></i>  &nbsp; Blog</a> 
-    <a href="https://alexandroshub.github.io/links.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-purple"><i class="fa fa-link"></i>  &nbsp; Links</a> 
+	<a href="https://alexandroshub.github.io/plus" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-purple"><i class="	fa fa-plus-circle"></i>  &nbsp; Plus</a> 
+    <a href="https://alexandroshub.github.io/links.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-teal"><i class="fa fa-link"></i>  &nbsp; Links</a> 
+        <a href="https://alexandroshub.github.io/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-lime"><i class="fa fa-envelope-o"></i>  &nbsp; Contact</a> 
     <hr>
 <a href="https://m.me/papaspyrou.alexandros" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i> Messenger</a>
-  <a href="https://alexandroshub.github.io/vip.dashboard.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
 <a href="https://alexandroshub.github.io/cono" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-pink"><i class="fa fa-connectdevelop fa-fw"></i> CoNo</a>
 </nav>
 
- 
-  
+<!-- Header with full-height image -->
+<header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
+  <div class="w3-display-left w3-text-white" style="padding:48px">
+    <span class="w3-jumbo w3-hide-small">CONTACT ME</span><br>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium">CONTACT ME</span><br>
+<body onload="typeWriter()">
+<p id="demo" class="w3-large"></p>
+<!--
+<script>
+var i = 0;
+var txt = "Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία, όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία .... ";
+var speed = 40; function typeWriter() {
+if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i); i++; setTimeout(typeWriter, speed);}}
+</script> 
+-->
+</body>
 
-    <div id="x" class="w3-container menu w3-padding-48 w3-card"> 
-<div class="w3-third  w3-middle" >
-<img src="https://66.media.tumblr.com/442c9634fe2886cbd5125f22cc090087/tumblr_picpslSyeZ1si59zfo1_400.png" alt="Me" style="width:70%"> 
-    
-   
-    </div><div class="w3-twothird" >
-    
-<h5>CONTACT</h5><p>
+<p>
  <a class="w3-button w3-red" href="mailto:alexispapy@gmail.com?Subject=Web%20Email" target="_top">Sent me Email<i class="w3-margin-left fa fa-envelope"></i></a>
   <a class="w3-button w3-blue" href="https://m.me/papaspyrou.alexandros"> Sent me Message<i class="w3-margin-left fa fa-comments-o"></i></a>
   <a class="w3-button w3-green" href="tel:+306940548867">Call Me<i class="w3-margin-left fa fa-phone"></i></a>
@@ -104,11 +123,6 @@ body, html { height: 100%; line-height: 1.8;}
 <button onclick="skype()" class="w3-button w3-blue" ><i class="fa fa-skype"></i></button><script>function skype() { alert("a-papaspyrou@outlook.com.gr");}</script>
 </p>
 
-
-<h5>PAGES</h5><p>
-<a class="w3-button w3-black" href="https://alexandroshub.github.io">Go to Home<i class="w3-margin-left fa  fa-home"></i></a>
-<a class="w3-button w3-light-grey" href="https://alexandroshub.github.io/cv.html">Check out my CV<i class="w3-margin-left fa fa-id-card-o"></i></a>
-<a class="w3-button w3-light-grey" href="https://alexandroshub.github.io/portfolio.html">Check out my work<i class="w3-margin-left fa fa-folder-open"></i></a>
 
 <h5>SOCIAL</h5><p>
 <a class="w3-button w3-light-grey" href="https://twitter.com/A_Papaspyrou"><i class="fa fa-twitter"></i></a>
@@ -129,17 +143,36 @@ body, html { height: 100%; line-height: 1.8;}
 <a class="w3-button w3-light-grey" href=" https://alexispapy.tumblr.com "><i class="fa fa-tumblr"></i></a>
 <a class="w3-button w3-light-grey" href="  "><i class="fa fa-asterisk  "></i></a>
 </p>
-</div></div>
+</div>
 
-<!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
- <!-- twitter --><a href=" https://twitter.com/A_Papaspyrou" title="Twitter"><i class="fa fa-twitter w3-hover-opacity"></i></a>
-  <!-- facebook -->
-  <a href="https://www.facebook.com/papaspyrou.a" title="Facebook"><i class="fa fa-facebook-f w3-hover-opacity">
-  </i></a>  | 
-  <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:280px;" alt="Signature" align="bottom">
+<span class="w3-hide-small">
+  
+  <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
+ 
+<!-- About --><a href=" https://alexandroshub.github.io/about " title="About"><i class="fa fa-info-circle"></i></a> | 
+<!-- twitter --><a href=" https://twitter.com/A_Papaspyrou" title="twitter"><i class="fa fa-twitter"></i></a>
+<!-- facebook -->
+<a href="https://www.facebook.com/papaspyrou.a" title="facebook"><i class="fa fa-facebook-f"></i></a>
+<!-- linkedin -->
+<a href="https://gr.linkedin.com/in/alexandrospapaspyrou" title="Linkedin"><i class="fa fa-linkedin"></i></a> | 
+<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:270px;" alt="Signature" align="bottom">
+</div></span>
+</header>
 
-</footer>
+
+<!-- SSM -->
+<style>
+.accordion {    background-color: #eee;    color: #444;  cursor: pointer;   padding: 18px;    width: 100%;   border: none;   text-align: left;    outline: none;   font-size: 15px;   transition: 0.4s; }
+.active, .accordion:hover {  background-color: #ccc;}
+.accordion:after {    content: '\002B';    color: #777;    font-weight: bold;    float: right;    margin-left: 5px;}
+.active:after {    content: "\2212";}
+.panel {    padding: 0 18px;    background-color: white;    max-height: 0;    overflow: hidden;    transition: max-height 0.2s ease-out;}
+</style>
+
+<p><!-- www.123formbuilder.com script begins here --><script type="text/javascript" defer src="//www.123formbuilder.com/embed/3216186.js" data-role="form" data-default-width="650px"></script><!-- www.123formbuilder.com script ends here --></p>
+<script>
+var acc = document.getElementsByClassName("accordion"); var i; for (i = 0; i < acc.length; i++) {acc[i].onclick = function() { this.classList.toggle("active"); var panel = this.nextElementSibling; if (panel.style.maxHeight){panel.style.maxHeight = null; } else { panel.style.maxHeight = panel.scrollHeight + "px"; }}}
+</script>
  
 <script>
 // Modal Image Gallery
@@ -164,3 +197,33 @@ function w3_close() {
 }
 </script>
 </body>
+<!--
+  _                                                                    
+ |_) _. ._   _.  _ ._     ._ _         /\  |  _      _. ._   _| ._ _   _ 
+ |  (_| |_) (_| _> |_) \/ | (_) |_|   /--\ | (/_ >< (_| | | (_| | (_) _> 
+        |          |   /                                                         
+CC-BY:		Alexandros S. Papaspyrou
+URL:		https://alexandroshub.github.io
+Version:	OCT18.10(Ath/Gr)
+
+Contact: 	a-papaspyrou@outlook.com.gr
+Mob: 		00306949452023
+Mob:		00306944
+Support: 	alexispapy@gmail.com
+Support: 	alexispapy@outlook.com
+Sub: 		papaspyrou.alexandros@gmail.com
+
+
+-->
+</html>
+<!-- googletagmanager -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128580719-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-128580719-1');
+</script> 
+
+
+<!-- Πηγές:  https://www.w3schools.com  |  https://www.udacity.com  |   -->
