--- a/cv.html
+++ b/cv.html
@@ -1,4 +1,4 @@
-<!-- CV _nov18_  -->
+<!-- CV _nov18_ FIX_8.7.19  -->
 
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -188,9 +188,13 @@ Read more</span>
         <h4>ΣΕΜΙΝAΡΙΑ</h4><hr class="w3-clear">
 <p>        
 <span class="w3-tag w3-small w3-theme-d5">CERN</span>
+<a href="https://atlas.cern/" style="text-decoration:none;">
+<span class="w3-tag w3-small w3-theme-l3">link</span></a>
 <br>Επίσκεψη και ξενάγηση στον Ευρωπαϊκό Οργανισμό Πυρηνικών Ερευνών και σχετική ενημέρωση για τις εγκαταστάσεις και τα πειράματα του CERN απο τον καθ. Ηλία Κατσούφη, Φυσικό-Ερευνητή CERN ομότιμο καθηγητή ΕΜΠ Δεκέμβριος 2013
 <p>
 <span class="w3-tag w3-small w3-theme-d5">50ο Θερινό Σχολείο 2015  Ε.Κ.Ε.Φ.Ε. ΔΗΜΟΚΡΙΤΟΣ</span>
+<a href="https://www.blod.gr/events/50o-therino-sholeio-tou-ekefe-dimokritos/" style="text-decoration:none;">
+<span class="w3-tag w3-small w3-theme-l3">link</span></a>
 <br>Ημερίδες με θέμα: From Your Diploma Work to Launching a Company και Σύνδεση του Σύγχρονου Σχολείου με την Επιστημονική Έρευνα και  Επιχειρηματικότητα & Καινοτομία
 <p>
 <span class="w3-tag w3-small w3-theme-d5">Tμήμα μηχ. Αυτοματισμού ΑΕΙ Πειραιά ΤΤ</span>
@@ -223,7 +227,7 @@ Read more</span>
 <br>Infocom Security 2016 
 <br><a href="http://events.naftemporiki.gr/internetofthings" style="text-decoration:none;">IoTΝαυτεμπορική 2017</a>
 <br>Infocom Security 2017 & workshop
-<br><a href="http://www.pan-orama.org/" style="text-decoration:none;">7o pan-orama</a> 
+<br><a href="http://www.pan-orama.org/" style="text-decoration:none;">7o & 9o pan-orama</a> & business days @oracle @siemens @intralot
 
 </div> 
       
